# kaggle-notebook-wrapper

./: README.md  pyproject.toml  setup.py
bash_scripts/: init.sh
example_notebooks/playground/: kernel-metadata.json  playground.ipynb  playground.ipynb.bak
kaggle_notebook_wrapper/: __init__.py  cli.py  custom_logger.py  log_parsing.py  notebook_metadata.py
kaggle_notebook_wrapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
