[tool.poetry]
name = "kaggle-notebook-wrapper"
version = "0.1.0"
description = "A package that wraps the Kaggle CLI for easier use."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.5.12"
nbformat = "^5.1.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.scripts]
kaggle-wrapper = "kaggle_notebook_wrapper.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"